[package]
name = "fudge-test-runtime"
version = "0.10.12"
edition = "2021"
build = "build.rs"
license = "LGPL-3.0"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
integer-sqrt = { workspace = true }
safe-mix = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
hex-literal = { workspace = true }
rustc-hex = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

# parachain
staging-parachain-info = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-utility = { workspace = true }
cumulus-pallet-aura-ext = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
pallet-collator-selection = { workspace = true }

# polkadot dependencies
polkadot-parachain-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }

# primitives
sp-authority-discovery = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-block-builder = { workspace = true }
sp-inherents = { workspace = true }
node-primitives = { workspace = true }
sp-offchain = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-arithmetic = { workspace = true }
sp-consensus-aura = { workspace = true }

# frame dependencies
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-session = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-identity = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-aura = { workspace = true }
pallet-sudo = { workspace = true }
pallet-preimage = { workspace = true }
pallet-treasury = { workspace = true }
pallet-message-queue = { workspace = true }


# xcm
xcm = { workspace = true }
pallet-xcm = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }
xcm-primitives = { workspace = true }
pallet-xcm-transactor = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
std = [
    "serde/std",
    "rustc-hex/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "xcm/std",
    "pallet-xcm/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-utility/std",
    "polkadot-parachain-primitives/std",
    "sp-consensus-babe/std",
    "sp-authority-discovery/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "sp-block-builder/std",
    "frame-executive/std",
    "sp-inherents/std",
    "pallet-scheduler/std",
    "node-primitives/std",
    "sp-offchain/std",
    "sp-core/std",
    "sp-std/std",
    "serde",
    "pallet-session/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-session/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-arithmetic/std",
    "sp-io/std",
    "rustc-hex",
    "safe-mix/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-primitives-timestamp/std",
    "pallet-collator-selection/std",
    "staging-parachain-info/std",
    "cumulus-pallet-aura-ext/std",
    "pallet-aura/std",
    "sp-consensus-aura/std",
    "polkadot-runtime-common/std",
    "pallet-treasury/std",
    "pallet-preimage/std",
    "pallet-identity/std",
    "pallet-sudo/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-sudo/std",
    "pallet-xcm-transactor/std",
    "xcm-primitives/std",
]

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = ["sp-api/disable-logging"]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []
