[package]
name = "fudge-test-relay"
version = "0.10.12"
edition = "2021"
build = "build.rs"
license = "LGPL-3.0"

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.195", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.8.0"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-api = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
inherents = { package = "sp-inherents", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-std = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-io = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-runtime = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-staking = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-core = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-genesis-builder = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-mmr-primitives = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-session = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-version = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
frame-election-provider-support = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }

pallet-authority-discovery = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-authorship = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-babe = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-balances = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-transaction-payment = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
frame-executive = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-grandpa = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-indices = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-offences = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-session = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
frame-support = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-staking = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-staking-reward-curve = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
frame-system = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
frame-system-rpc-runtime-api = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
test-runtime-constants = { package = "test-runtime-constants", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-timestamp = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-sudo = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-vesting = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }

runtime-common = { package = "polkadot-runtime-common", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
primitives = { package = "polkadot-primitives", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
pallet-xcm = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
polkadot-parachain-primitives = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
polkadot-runtime-parachains = { git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
xcm = { package = "staging-xcm", git = "https://github.com/cdamian/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.7.2-xcm-test-runtime" }

[dev-dependencies]
hex-literal = "0.4.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
sp-trie = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }
serde_json = "1.0.111"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/cdamian/polkadot-sdk", branch = "release-polkadot-v1.7.2-xcm-test-runtime" }

[features]
default = ["std"]
no_std = []
only-staking = []
runtime-metrics = [
    "polkadot-runtime-parachains/runtime-metrics",
    "sp-io/with-tracing",
]

std = [
    "authority-discovery-primitives/std",
    "babe-primitives/std",
    "beefy-primitives/std",
    "bitvec/std",
    "block-builder-api/std",
    "frame-election-provider-support/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "inherents/std",
    "log/std",
    "offchain-primitives/std",
    "pallet-authority-discovery/std",
    "pallet-authorship/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-indices/std",
    "pallet-offences/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-vesting/std",
    "pallet-xcm/std",
    "parity-scale-codec/std",
    "polkadot-parachain-primitives/std",
    "polkadot-runtime-parachains/std",
    "primitives/std",
    "runtime-common/std",
    "rustc-hex/std",
    "scale-info/std",
    "serde/std",
    "serde_derive",
    "sp-api/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-io/std",
    "sp-mmr-primitives/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-version/std",
    "test-runtime-constants/std",
    "tx-pool-api/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "xcm/std",
]

runtime-benchmarks = [
    "frame-election-provider-support/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-babe/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-indices/runtime-benchmarks",
    "pallet-offences/runtime-benchmarks",
    "pallet-staking/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "polkadot-parachain-primitives/runtime-benchmarks",
    "polkadot-runtime-parachains/runtime-benchmarks",
    "primitives/runtime-benchmarks",
    "runtime-common/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "sp-staking/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "xcm-executor/runtime-benchmarks",
]
